--- a/index.html
+++ b/index.html
@@ -279,8 +279,34 @@
     <br><br> <br><br>
     <hr>
     <br><br>
+    <div id="posts" class="row no-gutter">
+        <div class="row">
+            <div class="item web col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
+                <a href="https://github.com/amalabidi/SimpleQuiz" style="color:grey">
 
-    <div class="item design col-8 col-sm-8 col-md-8 col-lg-4 col-xl-4 mb-4">
+                    <img class="img-fluid" src="images/img4.png" width="200" height="200">
+                    <br><br>
+                    <p> <b>A simple Quiz developed with flutter </b></p>
+                </a>
+            </div>
+
+            <div class="item web col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
+                <a href="#" style="color:grey">
+
+                    <img class="img-fluid" src="images/img3.jpg" width="250" height="100">
+                    <p style="text-align: center" ><i> <b>Clazana </b></i></p>
+                    <p><b> a monitoring web application developed with reactJS , nodeJS , MongoDB and ExpressJS </b></p>
+                </a>
+            </div>
+            <div class="row">
+                <br><br>
+                <div class="item design col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
+
+
+
+                </div>
+
+    <!--<div class="item design col-8 col-sm-8 col-md-8 col-lg-4 col-xl-4 mb-4">
 
         <a href="#" style="color:grey">
 
@@ -305,7 +331,7 @@
 </div>
 
 
-
+-->
 
 
 
