--- a/index.html
+++ b/index.html
@@ -235,8 +235,63 @@
                     <h2 class="section-title text-center mb-5">My Portfolio</h2>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-lg-4">
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="images/img5.jpg" alt="Card image cap" width="100" height="200">
+                <div class="card-body">
+                    <h5 class="card-title">Deep Learning /Machine Learning Projects</h5>
+
+                    <a href="https://github.com/amalabidi/Examples" class="btn btn-primary">See project</a>
+                </div>
+            </div>
+                </div>
+                <div class="col-lg-4">
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="images/img1.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Pause Douceur</h5>
+                    <p class="card-text">an online pastry developed with Symfony 4.</p>
+                    <a href="https://github.com/amalabidi/ProjetWeb" class="btn btn-primary">See Project</a>
+                </div>
+            </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="images/img2.jpg" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Home Decor</h5>
+                        <p class="card-text"><p><b>a mobile application for an online store for selling furniture developed with flutter ,MongoDB,NodeJS and ExpressJS
+                        .</p>
+                        <a href="https://github.com/amalabidi/MobileProject_front" class="btn btn-primary">See Project</a>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4">
+                <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="images/img4.png" width="200" height="200" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">A simple Quiz developed with flutter</h5>
+
+                    <a href="https://github.com/amalabidi/SimpleQuiz" class="btn btn-primary">See Project</a>
+                </div>
+            </div>
+                </div>
+                <div class="col-lg-4">
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="images/img3.jpg" width="250" height="100" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Pause Douceur</h5>
+                        <p class="card-text"><p><b>a monitoring web application developed with reactJS , nodeJS , MongoDB and ExpressJS</b></p>
+
+                        <a href="#" class="btn btn-primary">See Project</a>
+                    </div>
+                </div>
+                </div>
+            </div>
 
 
+<!--
             <div id="posts" class="row no-gutter">
                 <div class="row">
                 <div class="item web col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
@@ -261,7 +316,7 @@
                     <a href="https://github.com/amalabidi/MobileProject_front" style="color:grey">
 
                         <img class="img-fluid" src="images/img2.jpg">
-                        <p style="text-align: center" ><i> <b>Home Decor </b></i></p>
+                        <p style="text-align: center" ><i> <b> </b></i></p>
                         <p><b>a mobile application for an online store for selling furniture developed with flutter ,MongoDB and ExpressJS
 
                         </b></p>
@@ -276,9 +331,9 @@
 
                 </div>
 
-    <br><br> <br><br>
+
     <hr>
-    <br><br>
+
     <div id="posts" class="row no-gutter">
         <div class="row">
             <div class="item web col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
@@ -305,7 +360,7 @@
 
 
                 </div>
-
+-->
     <!--<div class="item design col-8 col-sm-8 col-md-8 col-lg-4 col-xl-4 mb-4">
 
         <a href="#" style="color:grey">
