--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
             <div class="card" style="width: 18rem;">
                 <img class="card-img-top" src="images/img5.jpg" alt="Card image cap" width="100" height="200">
                 <div class="card-body">
-                    <h5 class="card-title">Deep Learning /Machine Learning Projects</h5>
+                    <h5 class="card-title" style="color:grey"><b>Deep Learning /Machine Learning Projects</b></h5>
 
                     <a href="https://github.com/amalabidi/Examples" class="btn btn-primary">See project</a>
                 </div>
@@ -250,7 +250,7 @@
             <div class="card" style="width: 18rem;">
                 <img class="card-img-top" src="images/img1.jpg" alt="Card image cap">
                 <div class="card-body">
-                    <h5 class="card-title">Pause Douceur</h5>
+                    <h5 class="card-title" style="color:grey"><b>Pause Douceur</b></h5>
                     <p class="card-text">an online pastry developed with Symfony 4.</p>
                     <a href="https://github.com/amalabidi/ProjetWeb" class="btn btn-primary">See Project</a>
                 </div>
@@ -259,8 +259,8 @@
                 <div class="card" style="width: 18rem;">
                     <img class="card-img-top" src="images/img2.jpg" alt="Card image cap">
                     <div class="card-body">
-                        <h5 class="card-title">Home Decor</h5>
-                        <p class="card-text"><p><b>a mobile application for an online store for selling furniture developed with flutter ,MongoDB,NodeJS and ExpressJS
+                        <h5 class="card-title" style="color:grey"><b>Home Decor</b></h5>
+                        <p class="card-text"><p>a mobile application for an online store for selling furniture developed with flutter ,MongoDB,NodeJS and ExpressJS
                         .</p>
                         <a href="https://github.com/amalabidi/MobileProject_front" class="btn btn-primary">See Project</a>
                     </div>
@@ -271,18 +271,18 @@
                 <div class="card" style="width: 18rem;">
                 <img class="card-img-top" src="images/img4.png" width="200" height="200" alt="Card image cap">
                 <div class="card-body">
-                    <h5 class="card-title">A simple Quiz developed with flutter</h5>
+                    <h5 class="card-title" style="color:grey"><b>A simple Quiz developed with flutter</b></h5>
 
                     <a href="https://github.com/amalabidi/SimpleQuiz" class="btn btn-primary">See Project</a>
                 </div>
             </div>
                 </div>
                 <div class="col-lg-4">
-                <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="images/img3.jpg" width="250" height="100" alt="Card image cap">
+                <div class="card"  style="width: 20rem;">
+                    <img class="card-img-top" src="images/img3.jpg" width="250" height="200" alt="Card image cap">
                     <div class="card-body">
-                        <h5 class="card-title">Pause Douceur</h5>
-                        <p class="card-text"><p><b>a monitoring web application developed with reactJS , nodeJS , MongoDB and ExpressJS</b></p>
+                        <h5 class="card-title" style="color:grey"><b>Pause Douceur</b></h5>
+                        <p class="card-text"><p>a monitoring web application developed with reactJS , nodeJS , MongoDB and ExpressJS</p>
 
                         <a href="#" class="btn btn-primary">See Project</a>
                     </div>
