--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Me</title>
+    <title>Amal Abidi</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-1/css/all.min.css" integrity="sha256-4w9DunooKSr3MFXHXWyFER38WmPdm361bQS/2KUWZbU=" crossorigin="anonymous">
@@ -281,13 +281,35 @@
                 <div class="card"  style="width: 20rem;">
                     <img class="card-img-top" src="images/img3.jpg" width="250" height="200" alt="Card image cap">
                     <div class="card-body">
-                        <h5 class="card-title" style="color:grey"><b>Pause Douceur</b></h5>
+                        <h5 class="card-title" style="color:grey"><b>Clazana</b></h5>
                         <p class="card-text"><p>a monitoring web application developed with reactJS , nodeJS , MongoDB and ExpressJS</p>
 
                         <a href="#" class="btn btn-primary">See Project</a>
                     </div>
                 </div>
                 </div>
+                <div class="col-lg-4">
+                    <div class="card"  style="width: 20rem;">
+                        <img class="card-img-top" src="images/cowork.jpg" width="250" height="200" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title" style="color:grey"><b>WeConnect</b></h5>
+                            <p class="card-text"><p>An application that regroups all the coworking spaces in Tunisia built with MEAN stack .</p>
+    
+                            <a href="#" class="btn btn-primary">See Project</a>
+                        </div>
+                    </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="card"  style="width: 20rem;">
+                            <img class="card-img-top" src="images/elearning.jpg" width="250" height="200" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title" style="color:grey"><b>Fac Academy</b></h5>
+                                <p class="card-text"><p>An E-learning application built for a client with MEAN stack .</p>
+        
+                                <a href="#" class="btn btn-primary">See Project</a>
+                            </div>
+                        </div>
+                        </div>
             </div>
 
 
