--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                         <h5 class="card-title" style="color:grey"><b>Clazana</b></h5>
                         <p class="card-text"><p>a monitoring web application developed with reactJS , nodeJS , MongoDB and ExpressJS</p>
 
-                        <a href="#" class="btn btn-primary">See Project</a>
+                        <a href="https://github.com/amalabidi/GestionnaireProjet-React" class="btn btn-primary">See Project</a>
                     </div>
                 </div>
                 </div>
@@ -295,7 +295,7 @@
                             <h5 class="card-title" style="color:grey"><b>WeConnect</b></h5>
                             <p class="card-text"><p>An application that regroups all the coworking spaces in Tunisia built with MEAN stack .</p>
     
-                            <a href="#" class="btn btn-primary">See Project</a>
+                            <a href="https://github.com/amalabidi/WeConnect" class="btn btn-primary">See Project</a>
                         </div>
                     </div>
                     </div>
@@ -306,7 +306,9 @@
                                 <h5 class="card-title" style="color:grey"><b>Fac Academy</b></h5>
                                 <p class="card-text"><p>An E-learning application built for a client with MEAN stack .</p>
         
-                                <a href="#" class="btn btn-primary">See Project</a>
+                                <a href="https://github.com/amalabidi/E-learning-Project" class="btn btn-primary">See Project</a>
+                                <a href="https://fac-academy.ureachus.com" class="btn btn-primary">See Website</a>
+
                             </div>
                         </div>
                         </div>
